@@ -101,6 +101,8 @@ struct strcache {
 #define GC_C_VERSION_PRF	"(MinGW) "
 #elif	defined (__DJGPP__)
 #define GC_C_VERSION_PRF	"(DJGPP) "
+#elif	defined (__ORANGEC__)
+#define GC_C_VERSION_PRF	"(OrangeC) "
 #else
 #define GC_C_VERSION_PRF	""
 #endif
@@ -4204,6 +4206,9 @@ process (char *cmd)
 }
 
 #elif defined(_MSC_VER)
+#ifndef HAVE_POPEN
+#error HAVE_POPEN is missing in config.h
+#endif
 static int
 process (const char *cmd)
 {
