@@ -1,12 +1,16 @@
 
+2018-05-08  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* cobc.c: added OrangeC version info
+
 2018-04-26  Dave Pitts <dpitts@cozx.com>
 
-	* cobc.c(reflow_replace_*_format_text): Changed to malloc token based on
+	* cobc.c (reflow_replace_*_format_text): Changed to malloc token based on
 	  newline length instead of hardcoded.
 
 2018-04-24  Dave Pitts <dpitts@cozx.com>
 
-	* cobc.c(reflow_replace_*_format_text): BUG #515 malloc'd token to
+	* cobc.c (reflow_replace_*_format_text): BUG #515 malloc'd token to
 	  large size.
 	* cobc.c (print_replace_text): BUG #515 malloc and realloc newline
 	  based on length of tokens.
